# Sdl2-game-tuto

./: .gitignore  CMakeLists.txt  README.md
header/: basic_header.h
source/: _Sdl_born.c  _close_win.c  _load_img.c  main.c
